--- a/QuickyBuy.Web/ClientApp/src/app/app.component.css
+++ b/QuickyBuy.Web/ClientApp/src/app/app.component.css
@@ -1,6 +1,13 @@
+body {
+  background-color: rgb(235,235,235);
+  height:700px;
+}
+
 @media (max-width: 767px) {
   /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
   .body-content {
     padding-top: 50px;
   }
 }
+
+
