--- a/QuickyBuy.Web/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickyBuy.Web/ClientApp/src/app/usuario/login/login.component.html
@@ -7,14 +7,20 @@
     <label for="inputEmail" class="sr-only">Email</label>
     <input type="email" id="inputEmail"
            name="email" placeholder="exemplo@exemplo.com"
-           class="form-control mb-2" [(ngModel)]="usuario.email"
+           class="form-control mb-2"
+           [(ngModel)]="usuario.email"
            #email="ngModel"
+           [ngClass]="{
+            'is-invalid':email.invalid && (email.dirty || email.touched),
+            'is-valid':email.valid && (email.dirty || email.touched)
+           }"
+           
            email
            required />
     <!-- Esta div esta fazendo a validacao no campo email caso ele nao  esteja preenchido -->
-    <div class="alert alert-danger sm" *ngIf="email.invalid && (email.dirty || email.touched)">
+    <div class="invalid-feedback mb-2" *ngIf="email.invalid && (email.dirty || email.touched)">
       <div *ngIf="email.errors.required">
-        Campo Obrigatorio!!!
+        Campo é Obrigatorio!!!
       </div>
       <div *ngIf="email.errors.email">
         Formato invalido!
@@ -25,11 +31,17 @@
     <label for="inputSenha" class="sr-only"></label>
     <input type="password" id="inputSenha"
            name="senha" placeholder="Senha"
-           class="form-control mb-2" [(ngModel)]="usuario.senha"
+           class="form-control mb-2"
+           [(ngModel)]="usuario.senha"
            #senha="ngModel"
+           [ngClass]="{
+            'is-invalid':senha.invalid && (senha.dirty || senha.touched),
+            'is-valid':senha.valid && (senha.dirty || senha.touched)
+           }"
+           
            required />
     <!-- Esta div esta fazendo a validacao no campo Senha caso ele nao  esteja preenchido -->
-    <div class="alert alert-danger sm" *ngIf="senha.invalid && (senha.dirty || senha.touched)">
+    <div class="invalid-feedback mb-2" *ngIf="senha.invalid && (senha.dirty || senha.touched)">
       <div *ngIf="senha.errors.required">
         Campo senha não pode ser vazio
       </div>
