Final modulo 8 - servicos  class 113 ...Tudo ok

--- a/QuickyBuy.Web/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickyBuy.Web/ClientApp/src/app/usuario/login/login.component.html
@@ -49,10 +49,21 @@
 
     </div>
 
-    <button class="btn-primary btn-block mb-2" type="submit" (click)="entrar()">Entrar</button>
+    <button class="btn-primary btn-block mb-2" type="submit" (click)="entrar()" [disabled]="ativar_spinner">
+
+      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="ativar_spinner"></span>
+      ENTRAR
+
+
+    </button>
+
+    <div class="alert alert-danger " *ngIf="mensagem" >
+      {{mensagem}}
+    </div>
+
     <div class="alert alert-primary" role="alert" *ngIf="usuarioAltenticado">
       Usuario Altenticado!
-    </div>
+    </div>  
   </form>
   
   
