--- a/QuickyBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/QuickyBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -2,7 +2,7 @@
   <nav class='navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3'>
     <div class="container">
       <img class="mr-3" src="../../assets/logocompras.png"  width="50" height="50" />
-      <a class="navbar-brand" [routerLink]='["/"]'>Speed Buy |</a>
+      <p class="text-light  font-italic h3">Speed Buyer |</p>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-label="Toggle navigation"
               [attr.aria-expanded]="isExpanded" (click)="toggle()">
         <span class="navbar-toggler-icon"></span>
