Aula 125 finalizada, tudo funcionando

--- a/QuickyBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/QuickyBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -31,7 +31,7 @@
           </li>
 
           <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="!usuarioLogado()">
-            <a class="nav-link text-light" [routerLink]='["/cadastrar"]'>Cadastrar</a>
+            <a class="nav-link text-light" [routerLink]='["/cadastro-usuario"]'>Cadastrar</a>
           </li>
         </ul>
       </div>
