--- a/QuickyBuy.Web/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickyBuy.Web/ClientApp/src/app/usuario/login/login.component.html
@@ -57,6 +57,8 @@
 
     </button>
 
+    <div>Não tem Cadastro ? <a [routerLink]='["/cadastro-usuario"]'>Cadastrar-se</a> </div>
+
     <div class="alert alert-danger " *ngIf="mensagem" >
       {{mensagem}}
     </div>
