--- a/QuickyBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/QuickyBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -26,9 +26,17 @@
             <a class="nav-link text-light" [routerLink]='["/entrar"]'>Entrar</a>
           </li>
 
-          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="usuarioLogado()" >
-            <a class="nav-link text-light" [routerLink]='[""]' (click)="sair()">Sair</a>
+          <li class="nav-item dropdown text-light" *ngIf="usuarioLogado()">
+            <a class="nav-link text-light dropdown-toggle" role="button" aria-haspopup="true" href="#"
+               aria-expanded="false" id="linkMenu" data-toggle="dropdown">{{usuario.email}} </a>
+
+            <ul class="dropdown-menu" aria-labelledby="linkMenu">
+              <li class="dropdown-item text-dark" role="menu"  [routerLink]='["/sair"]' (click)="sair()" >Sair</li>
+            </ul>
+
+
           </li>
+
 
           <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="!usuarioLogado()">
             <a class="nav-link text-light" [routerLink]='["/cadastro-usuario"]'>Cadastrar</a>
