--- a/QuickyBuy.Web/ClientApp/src/app/produto/produto.component.html
+++ b/QuickyBuy.Web/ClientApp/src/app/produto/produto.component.html
@@ -1,11 +1,56 @@
-<h1 class="h4">Cadastro de Produto</h1>
+<h1 class="h4 titulo">Cadastro de Produto</h1>
 <label for="inputNome" class="sr-only">Nome</label>
 <input type="text" id="inputName"
-       name="inputNome"
+       name="nomeProduto"
        placeholder="Nome do Produto"
        class="form-control mb-2 col-md-4"
        [ngClass]=""
        [(ngModel)]="produto.nome"
        #nome="ngModel"
-       required
-       />
+       required />
+
+<div class="invalid-feedback" *ngIf="nome.invalid && (nome.dirty || nome.touched)">
+  <div ngIf="nome.errors.required">
+      Campo Obrigatorio !!
+  </div>
+
+</div>
+
+
+
+<label for="inputDescricao" class="sr-only">Descricao</label>
+<input type="text" id="inputDescricao"
+       name="descricaoProduto"
+       placeholder="Descricao do Produto"
+       class="form-control mb-2 col-md-4"
+       [ngClass]=""
+       [(ngModel)]="produto.descricao"
+       #descricao="ngModel"
+       required />
+
+<label for="inputPreco" class="sr-only">Preço</label>
+<input type="number" id="inputPreco"
+       name="PrecoProduto"
+       placeholder="R$ Preco"
+       class="form-control mb-2 col-md-2"
+       [ngClass]=""
+       [(ngModel)]="produto.preco"
+       #preco="ngModel"
+       required />
+
+
+
+<div class="input-group mb-3">
+  <div class="custom-file col-md-4">
+    <input type="file" class="custom-file-input" id="inputFile" (change)="inputChange($event.target.files)" />
+    <label class="custom-file-label" for="inputFile">Escolha uma Foto</label>
+  </div>
+</div>
+
+
+<button class="btn btn-primary" (click)="cadastrar" [disabled]="ativar_spinner">
+  <span class="spinner-border spinner-border-sm" *ngIf="ativar_spinner"></span>
+    Cadastrar 
+</button>
+
+
